<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResourcesActivity">
    <TextView
        android:id="@+id/ResourceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Resources"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scrollbarAlwaysDrawVerticalTrack="true">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_home_24"
            android:id="@+id/Home"/>
        <Button
            android:id="@+id/History"
            android:layout_width="wrap_content"
            android:text="@string/history"
            android:textSize="12sp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/Towns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/towns_to_visit" />
        <Button
            android:id="@+id/Resources"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/resources"
            />

    </LinearLayout>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:paddingTop="10dp"
        android:background="@color/cardview_light_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ResourceTitle"
        >
        <TextView
            android:id="@+id/link1"
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="40dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/link1"
            android:background="@drawable/rectangle1"
            android:textColor="@color/black"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/link2"
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="40dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/link2"
            android:background="@drawable/rectangle1"
            android:textColor="@color/black"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/link3"
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="40dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/link3"
            android:background="@drawable/rectangle1"
            android:textColor="@color/black"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/link4"
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="40dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/link4"
            android:background="@drawable/rectangle1"
            android:textColor="@color/black"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/link5"
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="40dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/link5"
            android:background="@drawable/rectangle1"
            android:textColor="@color/black"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/link6"
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="40dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/link6"
            android:background="@drawable/rectangle1"
            android:textColor="@color/black"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/link7"
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="40dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/link7"
            android:background="@drawable/rectangle1"
            android:textColor="@color/black"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/link8"
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="40dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/link8"
            android:background="@drawable/rectangle1"
            android:textColor="@color/black"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/link9"
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="40dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/link9"
            android:background="@drawable/rectangle1"
            android:textColor="@color/black"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/link10"
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="40dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/link10"
            android:background="@drawable/rectangle1"
            android:textColor="@color/black"
            android:textSize="12sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/works_cited"
            android:textSize="20dp"
            />
        <TextView
            android:id="@+id/workscited"
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="40dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/workscited"
            android:background="@drawable/rectangle1"
            android:textColor="@color/black"
            android:textSize="12sp" />



    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>