<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTownActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:gravity="center_horizontal"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingTop="20dp"
            android:id="@+id/topAttraction"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingTop="20dp"
            android:id="@+id/topFood"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingTop="20dp"
            android:id="@+id/category"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scrollbarAlwaysDrawVerticalTrack="true">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_home_24"
            android:id="@+id/Home"/>
        <Button
            android:id="@+id/History"
            android:layout_width="wrap_content"
            android:text="@string/history"
            android:textSize="12sp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/Towns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/towns_to_visit" />
        <Button
            android:id="@+id/Resources"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/resources"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>